<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.firstday.zhaiDisplay">

    <include layout="@layout/title"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="70dp">
        <TextView
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userName"
            android:textSize="20sp"
            android:layout_alignBottom="@+id/editText1"
            android:id="@+id/textView" />

        <TextView
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/password"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_alignBottom="@+id/editText2"
            android:layout_below="@id/textView"
            />
        <EditText
            android:gravity="center"
            android:hint="@string/Enter_userName"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText1"
            android:layout_alignLeft="@+id/editText2"
            android:layout_alignParentRight="true"
            />
        <EditText
            android:layout_toRightOf="@id/textView2"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:hint="@string/Enter_Password"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:layout_below="@id/editText1"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_rememberPWD"
            android:gravity="center"
            android:id="@+id/checkBox"
            android:layout_below="@id/editText2"
            android:layout_alignRight="@id/editText2"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkBox"
            android:layout_margin="10dp"
            android:id="@+id/ll_hello">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:id="@+id/button1"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Register"
                android:id="@+id/button2"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_hello"
            android:autoLink="web"
            android:id="@+id/forget_password"
            android:text="@string/forget_password"
            />

    </RelativeLayout>

</RelativeLayout>
