<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/title"/>
    <!-- 用户名文本及输入文本 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout_user_name"
        android:paddingTop="70dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/register_user_name"
            android:text="@string/userName"
            android:textSize="20sp"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:id="@+id/the_user_name"
            android:textSize="20sp"
            android:maxLines="1"
            android:background="@android:drawable/editbox_background_normal"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/user_name_prompt"
            android:layout_weight="4"
            android:hint="@string/Enter_userName"
            android:maxLines="1"
            />
    </LinearLayout>
    <!-- 用户密码文本及输入文本 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout_user_password"
        android:layout_below="@id/linearLayout_user_name"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="20sp"
            android:id="@+id/register_user_password"
            android:text="@string/password"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:id="@+id/the_user_password"
            android:inputType="textPassword"
            android:background="@android:drawable/editbox_background_normal"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/Enter_Password"
            android:id="@+id/password_prompt"
            />
    </LinearLayout>
    <!-- 用户密码确认文本及输入文本 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout_user_check_password"
        android:layout_below="@id/linearLayout_user_password"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/register_user_check_password"
            android:text="@string/password"
            android:textSize="20sp"
            android:maxLength="8"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:id="@+id/the_user_check_password"
            android:inputType="textPassword"
            android:background="@android:drawable/editbox_background_normal"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/Enter_check_Password"
            android:id="@+id/check_password_prompt"
            />
    </LinearLayout>
    <!-- 用户性别选择文本及单选按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout_male_choice"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout_user_check_password">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/male_choice"
                android:text="@string/male_choice"
                android:textSize="20sp"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/male"
                    android:checked="true"
                    android:text="@string/male"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/female"
                    android:text="@string/female"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/blackshow"
                android:layout_gravity="center"
                />
        </LinearLayout>
    </LinearLayout>
    <!-- 用户出生日期文本及下拉菜单 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout_birthday"
        android:layout_below="@+id/linearLayout_male_choice"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/birth_day_choice"
            android:text="@string/birth_day"
            android:textSize="20sp"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/year_choice"
            android:prompt="@+string/year"
            android:entries="@+array/year"
            >
        </Spinner>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/month_choice"
            android:prompt="@+string/month"
            android:entries="@+array/month">
        </Spinner>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/day_choice"
            android:prompt="@+string/day"
            android:entries="@+array/day">
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout_birthday"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register"
            android:text="@string/Register"
            />
    </LinearLayout>

</RelativeLayout>